# swag

./: .gitignore  features.txt  ideas.txt  swag.cabal  swag.hs
example/: about.pandoc  blog.pandoc  projects.pandoc
example/#/: blog.st  index.st  post.st
example/_posts/: anotherpost.pandoc  first_post.pandoc  latex_bib_style.pandoc
example/_templates/: blog.st  content.st  feed.st  footer.st  header.st  index.st  post.st  sidebar.st
example/posts(page)/: latex_bib_style.pandoc
example/posts(page)/#/: content.st
example/static/: style.css
